correct dark mode

--- a/assets/style/components/_darkmode.scss
+++ b/assets/style/components/_darkmode.scss
@@ -1,46 +1,42 @@
 
-/* @media (prefers-color-scheme: light) {
-    body {
-        background-color: $colorlight;
-        color: rgb(0, 0, 0);
-      };
+//  @media (prefers-color-scheme: light) {
+//     body {
+//         background-color: $colorlight;
+//         color: rgb(0, 0, 0);
+//       };
 
-    };
+//     };
 
     
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: rgb(16, 14, 21);
-        color: $colorlight&;
+// @media (prefers-color-scheme: dark) {
+//     body {
+//         background-color: rgb(16, 14, 21);
+//         color: $colorlight&;
 
-        footer {
-            background-color: $colorlight;
-            color: $colormain;
+//         footer {
+//             background-color: $colorlight;
+//             color: $colormain;
 
-        };
-      };
+//         };
+//       };
 
-    };
-    */
+//     };
+    
 
-    /*:root {
-        --font: #333;
-        --bg: #f1f1f1;
-    };*/
+//     :root {
+//         --font: #333;
+//         --bg: #f1f1f1;
+//     };
 
-
-
-
-/*-----------------------------button---------------------------*/
-    .nav__mode {
+.nav__mode {
         width: 100%;
         height: 40px;
         margin: 0 2rem;
         position: relative;
 
         &__toggle{
-            // -webkit-appearance: none;
-            // appearance: none;
+            -webkit-appearance: none;
+            appearance: none;
             height: 32px;
             width: 65px;
             background-color: $colormain;
@@ -63,9 +59,6 @@
         };
 
     }
-
-
-    /*-----------------------------dark theme---------------------------*/
     .dark-theme {
         background-color: #15181f;
         color: #e5e5e5;
@@ -85,9 +78,9 @@
     
 
     
-    /*.dark-theme .toggle:after{
+    .dark-theme .toggle:after{
         background-color: transparent;
         box-shadow: 10px 10px #15181f;
         top: -4px;
         left: 30px;
-    }*.
+    }
