--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,3 @@
-* {
-  font-family: "Poppins", sans-serif;
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -312,61 +308,8 @@ template {
   display: none;
 }
 
-/* @media (prefers-color-scheme: light) {
-    body {
-        background-color: $colorlight;
-        color: rgb(0, 0, 0);
-      };
-
-    };
-
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: rgb(16, 14, 21);
-        color: $colorlight&;
-
-        footer {
-            background-color: $colorlight;
-            color: $colormain;
-
-        };
-      };
-
-    };
-    */
-/*:root {
-    --font: #333;
-    --bg: #f1f1f1;
-};*/
-.nav__mode {
-  width: 100%;
-  height: 40px;
-  margin: 0 2rem;
-  position: relative;
-}
-.nav__mode__toggle {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-  height: 32px;
-  width: 65px;
-  background-color: #383E56;
-  position: absolute;
-  right: 0;
-  border-radius: 20px;
-  outline: none;
-  cursor: pointer;
-}
-.nav__mode__toggle:after {
-  content: "";
-  position: absolute;
-  height: 24px;
-  width: 24px;
-  background-color: #EEDAD1;
-  top: 4px;
-  left: 7px;
-  border-radius: 50%;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
 .nav {
@@ -424,28 +367,6 @@ template {
   color: #fff;
   background-color: #383E56;
   box-shadow: 0px 5px 15px rgba(56, 62, 86, 0.25);
-}
-
-.main__header {
-  width: 80%;
-  height: 300px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.main__header .main__title {
-  font-size: 32px;
-  font-weight: 600;
-  font-family: "Merriweather", serif;
-}
-.main__header .main__description {
-  width: 60%;
-  text-align: center;
-}
-.main__header .main__description span {
-  font-weight: 600;
 }
 
 .header__content {
@@ -517,6 +438,28 @@ template {
     grid-area: 1/1/4/2;
   }
 }
+.main__header {
+  width: 80%;
+  height: 300px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.main__header .main__title {
+  font-size: 32px;
+  font-weight: 600;
+  font-family: "Merriweather", serif;
+}
+.main__header .main__description {
+  width: 60%;
+  text-align: center;
+}
+.main__header .main__description span {
+  font-weight: 600;
+}
+
 .main__selection {
   width: 80%;
   margin: 0 auto 100px auto;
@@ -781,4 +724,56 @@ template {
   background-size: contain;
   background-repeat: no-repeat;
   padding-left: 1.5rem;
+}
+
+.nav__mode {
+  width: 100%;
+  height: 40px;
+  margin: 0 2rem;
+  position: relative;
+}
+.nav__mode__toggle {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  height: 32px;
+  width: 65px;
+  background-color: #383E56;
+  position: absolute;
+  right: 0;
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+}
+.nav__mode__toggle::after {
+  content: "";
+  position: absolute;
+  height: 24px;
+  width: 24px;
+  background-color: #EEDAD1;
+  top: 4px;
+  left: 7px;
+  border-radius: 50%;
+}
+
+.dark-theme {
+  background-color: #15181f;
+  color: #e5e5e5;
+}
+
+.dark-theme .nav__mode__toggle {
+  background-color: #f1f1f1;
+}
+.dark-theme .nav__mode__toggle::after {
+  background-color: transparent;
+  box-shadow: 10px 10px #15181f;
+  top: -4px;
+  left: 30px;
+}
+
+.dark-theme .toggle:after {
+  background-color: transparent;
+  box-shadow: 10px 10px #15181f;
+  top: -4px;
+  left: 30px;
 }/*# sourceMappingURL=style.css.map */
